--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             </div>
             <a href="" class=" hidden  p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get started</a>
             <!-- hamburger icon  -->
-            <button id="menu-btn" script="onClick()" class=" block hamburger mid:hidden focus:outline-none">
+            <button id="menu-btn" script="onClick()" class=" block hamburger md:hidden focus:outline-none">
                 <span class="hamburger-top"></span>
                 <span class="hamburger-middle"></span>
                 <span class="hamburger-bottom"></span>
@@ -238,6 +238,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
